# google-drive-rag-bot

./: .gitignore  Dockerfile  README.md  docker-compose-ollama.yml  docker-compose.yml  pyproject.toml
app/: load.py  main.py  util.py
demo_app/: main.py
