[tool.poetry]
name = "Google Drive RAG Bot"
version = "0.1.0"
description = "An LLM powered chatbot for your google docs."
authors = ["Dave Moore"]
license = "MIT"
readme = "README.md"
packages = [{include = "google_drive_rag_bot"}]

[tool.poetry.dependencies]
python = "3.9.17"
langchain = "0.1.11"
streamlit = "1.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
