[tool.poetry]
name = "Google Drive RAG Bot"
version = "0.1.0"
description = "An LLM powered chatbot for your google docs."
authors = ["Dave Moore"]
license = "MIT"
readme = "README.md"
packages = [{include = "google_drive_rag_bot"}]

[tool.poetry.dependencies]
python = "3.9.17"
langchain = "0.1.16"
langchain-experimental = "0.0.57"
langchain-postgres = "0.0.3"
psycopg = "3.1.18"
streamlit = "1.24.0"
tqdm = "4.66.2"
docx2txt = "0.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
